fix overflow

--- a/react-port/src/App.css
+++ b/react-port/src/App.css
@@ -1,24 +1,8 @@
-/* :root {
-  --main-red: #b13e53;
-  --main-orange: #ef7d57;
-  --main-yellow: #ffcd75;
-  --main-lime: #a7f070;
-  --main-green: #28a754;
-  --main-blue: #257179;
-  --main-white: #f4f4f6;
-  --main-light-grey: #adb0b5;
-  --main-grey: #696c70;
-  --main-dark-grey: #33373a;
-  --main-black: #1a1a1e;
-  --link-color: var(--main-orange);
-  --bg-color: #fff;
-}
-
 * {
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
   margin: 0;
   padding: 0;
-} */
+}
 
 :root, body, * {
   overscroll-behavior: none;
